# python-gdcm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  create_package_wheel.sh  gdcm.py  pyproject.toml  run_package_creation.sh  setup.py
.github/workflows/: wheels.yml
_gdcm/scripts/: gdcmgendir.py
scripts/: gdcmdump  gdcminfo
