cmake_minimum_required(VERSION 3.9.2 FATAL_ERROR)

project(${SKBUILD_PROJECT_NAME} LANGUAGES CXX C)

include(CMakePrintHelpers)

SET(DCMAKE_CXX_STANDARD 11)
SET(GDCM_BUILD_APPLICATIONS ON)
SET(GDCM_DOCUMENTATION OFF)
SET(GDCM_BUILD_DOCBOOK_MANPAGES OFF)


if(WIN32)
  SET(GDCM_BUILD_SHARED_LIBS OFF)
else()
  SET(GDCM_BUILD_SHARED_LIBS ON)
endif(WIN32)

if(LINUX)
  SET(PYTHON_LIBRARY "MANOLO")
endif(LINUX)

find_package(Python COMPONENTS Interpreter Development.Module REQUIRED)

SET(GDCM_WRAP_PYTHON ON)
SET(GDCM_NO_PYTHON_LIBS_LINKING ON)
SET(PYTHON_EXECUTABLE "${Python_EXECUTABLE}")

SET(GDCM_USE_SYSTEM_OPENSSL ON)

# SET(PYTHON_INCLUDE_DIR "${Python_INCLUDE_DIR}")
# SET(PYTHON_LIBRARY "${Python_LIBRARIES}")

# cmake_print_variables(Python_EXECUTABLE)
# cmake_print_variables(Python_INCLUDE_DIR)
# cmake_print_variables(Python_LIBRARIES)
# cmake_print_variables(SKBUILD_HEADERS_DIR)
# cmake_print_variables(SKBUILD_DATA_DIR)
# cmake_print_variables(SKBUILD_SCRIPTS_DIR)
# cmake_print_variables(CMAKE_INSTALL_BINDIR)

SET(GDCM_INSTALL_BIN_DIR ${SKBUILD_PLATLIB_DIR}/_gdcm)
SET(GDCM_INSTALL_LIB_DIR ${SKBUILD_PLATLIB_DIR}/_gdcm)
SET(GDCM_INSTALL_DATA_DIR ${SKBUILD_PLATLIB_DIR}/_gdcm)
SET(GDCM_INSTALL_INCLUDE_DIR ${SKBUILD_NULL_DIR})
SET(GDCM_INSTALL_PACKAGE_DIR ${SKBUILD_NULL_DIR})

SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
if (APPLE)
  SET(CMAKE_INSTALL_RPATH "@loader_path/")
  SET(CMAKE_MODULE_LINKER_FLAGS "-undefined dynamic_lookup -liconv")
  SET(CMAKE_SHARED_LINKER_FLAGS "-undefined dynamic_lookup -liconv")
elseif (LINUX)
  SET(CMAKE_INSTALL_RPATH "\$ORIGIN")
endif()

# SET(SKBUILD_DATA_DIR ${CMAKE_INSTALL_PREFIX}/_gdcm)
# SET(SKBUILD_SCRIPTS_DIR ${CMAKE_INSTALL_PREFIX}/_gdcm)
# SET(SKBUILD_LIB_DIR ${CMAKE_INSTALL_PREFIX}/_gdcm)
# set(CMAKE_INSTALL_BINDIR ${SKBUILD_SCRIPTS_DIR})
# SET(SKBUILD_HEADERS_DIR ${SKBUILD_NULL_DIR})
# SET(CMAKE_INSTALL_LIBDIR _gdcm)
# SET(CMAKE_INSTALL_BINDIR _gdcm)
# SET(CMAKE_INSTALL_INCLUDEDIR ${SKBUILD_NULL_DIR})

ADD_SUBDIRECTORY(gdcm_src)
